# LVGL_project_template

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
main/screen/: display_ui.c  display_ui.h
main/src/: main.c
